@@ -38,6 +38,9 @@ Changes in the next release:
   configuration script handles the --target= command line option and the result
   is available as $(Configure.TargetArchTriplet).
 
+* The configure script now accepts but ignores --oldincludedir for compatibility
+  with some build systems.
+
 Changes in 0.4.2:
 
 * The PVS module no longer fails when running the pvs-report target.
